--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -568,6 +568,9 @@ cleanupJobs:
       seccompProfile:
         type: RuntimeDefault
 
+    # -- Pod PriorityClassName
+    priorityClassName: ""
+
     # -- Job resources
     resources: {}
 
@@ -638,6 +641,9 @@ cleanupJobs:
           - ALL
       seccompProfile:
         type: RuntimeDefault
+
+    # -- Pod PriorityClassName
+    priorityClassName: ""
 
     # -- Job resources
     resources: {}
